fix: fixed socials overlapping on 3-tab tablet version

--- a/components/organisms/Sidebar/sidebar.module.scss
+++ b/components/organisms/Sidebar/sidebar.module.scss
@@ -375,7 +375,7 @@
 
 
 //Hide socials when screen is too small
-@media screen and (min-width: 740px) and (max-height: 1060px) {
+@media screen and (min-width: 740px) and (max-height: 1110px) {
   .sidebar {
     &_socials {
       display: none;
@@ -383,7 +383,7 @@
   }
 }
 
-@media screen and (min-width: 740px) and (min-height: 1061px) {
+@media screen and (min-width: 740px) and (min-height: 1111px) {
   .sidebar {
     &_socials {
       display: flex;
